k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-launchpad
  labels:
    app: devops-launchpad
spec:
  type: ClusterIP
  selector:
    app: devops-launchpad
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
